Code smells following Java 17 migration